typescript/checker/tests/conformance/es6/Symbols/symbolType19.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            32,
        ),
        hi: BytePos(
            33,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType19.ts:3:5
  |
3 | var x: symbol | E;
  |     ^

